<resources>
    <string name="app_name">App Portfolio</string>

    <string name="nanodegree_apps">Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_app">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger_app">Build it Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="capstone_app">Capstone Project</string>
</resources>
