<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/nanodegree_apps" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="@dimen/heading_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_app"
        android:id="@+id/button"
        android:layout_marginTop="24dp"
        android:onClick="launchSpotifyStreamer"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:onClick="launchScoresApp"
        android:background="@color/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="launchLibraryApp"
        android:background="@color/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_app"
        android:id="@+id/button4"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:onClick="launchBuildItBigger"
        android:background="@color/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_app"
        android:id="@+id/button5"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:onClick="launchXYZReader"
        android:background="@color/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"
        android:id="@+id/button6"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:onClick="launchCapstoneProject"
        android:background="@color/button" />

</RelativeLayout>
